@@ -11,3 +11,5 @@ buildroot-0.1.2 2008-11-06 <spudmonkey@racsa.co.cr>
 	* Add support for SH-1 toolchain
 
 buildroot-0.1.3 2008-xx-xx <spudmonkey@racsa.co.cr>
+
+	* Add support for H8/300 toolchain
